# rapace

./: .gitignore  Cargo.toml  DESIGN.md  README.md  ZERO_COPY_DESER.md  conductor.json
.cargo-husky/hooks/: pre-push
.config/: nextest.toml
.config/tracey/: config.kdl
.github/workflows/: ci.yml  docs.yml
.readme-templates/: rapace-transport-websocket.md.in
conformance/: Cargo.toml
conformance/src/: harness.rs  main.rs  protocol.rs
conformance/src/tests/: call.rs  cancel.rs  channel.rs  control.rs  data.rs  error.rs  flow.rs  frame.rs  handshake.rs  langmap.rs  metadata.rs  method.rs  mod.rs  overload.rs  payload.rs  priority.rs  schema.rs  security.rs  stream.rs  transport.rs  tunnel.rs
conformance/tests/: conformance.rs  coverage.rs
conformance/tests-runner/: Cargo.toml
conformance/tests-runner/src/: main.rs
crates/rapace/: CHANGELOG.md
crates/rapace-cell/: README.md
crates/rapace-cell/src/: lib.rs  tracing_setup.rs
crates/rapace-cell/tests/: dispatcher_builder.rs
crates/rapace-core/: CHANGELOG.md  Cargo.toml
crates/rapace-core/src/: error.rs  frame.rs  lib.rs  owned_message.rs  session.rs  transport.rs  tunnel_stream.rs
crates/rapace-core/src/transport/: mem.rs  shm.rs  websocket.rs
crates/rapace-core/src/transport/shm/: alloc.rs  doorbell.rs  hub_alloc.rs  hub_layout.rs  hub_session.rs  hub_transport.rs  layout.rs  session.rs  slot_guard.rs  transport.rs
crates/rapace-core/tests/: shm_hub_roundtrip.rs  transport_conformance.rs
crates/rapace-http/: Cargo.toml
crates/rapace-http/src/: lib.rs
crates/rapace-macros/: CHANGELOG.md
crates/rapace-macros/src/: lib.rs  parser.rs
crates/rapace-plugin/: Cargo.toml
crates/rapace-plugin/src/: lib.rs
crates/rapace-registry/: CHANGELOG.md
crates/rapace-testkit/: CHANGELOG.md
crates/rapace-testkit/src/: bidirectional.rs  helper_binary.rs  lib.rs
crates/rapace-tracing/: CHANGELOG.md  Cargo.toml
crates/rapace-tracing/src/: lib.rs
crates/rapace-transport/: Cargo.toml
crates/rapace-transport-mem/: CHANGELOG.md  Cargo.toml
crates/rapace-transport-shm/: CHANGELOG.md
crates/rapace-transport-shm/src/: doorbell.rs  futex.rs  hub_alloc.rs  hub_transport.rs  layout.rs  lib.rs  session.rs  transport.rs
crates/rapace-transport-stream/: CHANGELOG.md
crates/rapace-transport-websocket/: CHANGELOG.md  Cargo.toml  README.md
crates/rapace-transport-websocket/src/: lib.rs
crates/rapace-transport/src/: lib.rs  mem.rs  shm.rs  stream.rs  websocket.rs
crates/rapace-wasm-client/src/: lib.rs
crates/rapace/examples/: basic.rs  tcp_client.rs
crates/rapace/src/: helper_binary.rs  lib.rs  session.rs
crates/rapace/tests/: result_return_type.rs  zero_copy_deser.rs
crates/shm-primitives/src/: lib.rs  loom_tests.rs  region.rs  slot.rs  spsc.rs  treiber.rs
crates/ur-taking-me-with-you/src/: lib.rs  linux.rs  macos.rs  windows.rs
demos/browser-tests-client/: Cargo.toml
demos/browser-tests-client/src/: lib.rs
demos/browser-tests-server/: Cargo.toml
demos/browser-tests-server/src/: main.rs
demos/browser-tests-shared/: Cargo.toml
demos/browser-tests-shared/src/: lib.rs
demos/browser-ws/: index.html
demos/dashboard/: Cargo.toml
demos/dashboard/src/: main.rs
demos/diagnostics-over-rapace/: Cargo.toml
demos/diagnostics-over-rapace/src/: helper.rs  main.rs
demos/diagnostics-over-rapace/tests/: cross_process.rs
demos/http-over-rapace/: Cargo.toml
demos/http-over-rapace/src/: lib.rs  main.rs
demos/http-over-rapace/tests/: cross_process.rs
demos/http-tunnel/: Cargo.toml
demos/http-tunnel/src/: host.rs  plugin.rs
demos/http-tunnel/tests/: integration.rs
demos/shm-image/: Cargo.toml
demos/shm-image/src/: main.rs
demos/template-engine/: Cargo.toml
demos/template-engine/tests/: cross_process.rs  peer_death.rs
demos/tracing-over-rapace/: Cargo.toml
demos/tracing-over-rapace/src/: main.rs
demos/tracing-over-rapace/tests/: cross_process.rs
docs/.config/: dodeca.kdl
docs/content/: _index.md
docs/content/guide/: _index.md  architecture.md  future.md  quick-start.md
docs/content/spec/: cancellation.md  core.md  frame-format.md  handshake.md  metadata.md  schema-evolution.md  transport-bindings.md
docs/content/transports/: _index.md
docs/sass/: main.scss
docs/templates/: base.html  index.html
examples/dashboard/src/: main.rs
examples/diagnostics_over_rapace/src/: helper.rs  lib.rs  main.rs
examples/diagnostics_over_rapace/tests/: cross_process.rs
examples/http_over_rapace/src/: helper.rs  lib.rs  main.rs
examples/http_over_rapace/tests/: cross_process.rs
examples/http_tunnel/src/: host.rs  host_bin.rs  main.rs  plugin.rs  plugin_bin.rs  protocol.rs
examples/shm_image/src/: main.rs
examples/template_engine/src/: lib.rs
examples/tracing_over_rapace/src/: helper.rs  (+1 more)
rust/rapace/: CHANGELOG.md
rust/rapace-cell/: CHANGELOG.md  Cargo.toml
rust/rapace-core/: CHANGELOG.md
rust/rapace-introspection/: CHANGELOG.md
rust/rapace-macros/: CHANGELOG.md
rust/rapace-protocol/: CHANGELOG.md
rust/rapace-registry/: CHANGELOG.md
rust/rapace-tracing/: CHANGELOG.md
rust/shm-primitives/: CHANGELOG.md
rust/ur-taking-me-with-you/: CHANGELOG.md  Cargo.toml
spec-proto/: Cargo.toml
spec-subject/: Cargo.toml
spec-subject/src/: main.rs
spec-tests/: Cargo.toml
spec-tests/src/: main.rs
typescript/src/: conformance-runner.ts  coverage.test.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+33 files in other folders)
