[package]
name = "rapace-conformance-tests"
version = "0.1.0"
edition = "2024"
description = "Rust integration tests for rapace-conformance harness"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rapace-conformance-tests"
path = "src/main.rs"

[dependencies]
facet-postcard.workspace = true
libtest-mimic = "0.8"
rapace-core.workspace = true
rapace-protocol.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
