[package]
name = "rapace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for rapace RPC"

[features]
default = ["mem", "stream"]
mem = []
stream = []
shm = ["dep:libc", "dep:static_assertions"]
websocket = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
async-stream.workspace = true
bitflags.workspace = true
bytes.workspace = true
enum_dispatch = "0.3.12"
facet.workspace = true
futures.workspace = true
futures-timeout.workspace = true
libc = { workspace = true, optional = true }
parking_lot.workspace = true
static_assertions = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
