[package]
name = "rapace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for rapace RPC"

[features]
default = ["mem", "stream"]
mem = []
stream = []
shm = ["dep:libc", "dep:static_assertions", "dep:allocator-api2"]
websocket = []
websocket-tungstenite = ["websocket", "dep:tokio-tungstenite"]
websocket-axum = ["websocket", "dep:axum"]
websocket-wasm = [
    "websocket",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:gloo-timers",
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
async-stream.workspace = true
allocator-api2 = { workspace = true, optional = true }
bitflags.workspace = true
bytes.workspace = true
enum_dispatch = "0.3.12"
facet.workspace = true
futures.workspace = true
futures-timeout.workspace = true
gloo-timers = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
parking_lot.workspace = true
static_assertions = { workspace = true, optional = true }
tokio.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
tracing.workspace = true
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[dev-dependencies]
